@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Exclude author targets from default Makefile
 
 0.0.5 Tue Nov 15 21:21:04 2016
   - Add minimum versions for test modules
